--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bountypls/bountypls<s>",
+    "name": "bountypls/bountypls",
     "type": "typo3-cms-extension",
     "description": "An example extension",
     "license": "GPL-2.0-or-later",
